--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <h1>My First Heading</h1>
 
 <p>My first paragraph. Oh,really</p>
+<a href="http://www.w3schools.com">This is a link</a>
 
 </body>
 </html>
