--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 
 <p>My first paragraph. Oh,really</p>
 <a href="http://www.w3schools.com">This is a link</a>
-
+<img src="1.jpg" alt ="null" width="104" height="142">
 </body>
 </html>
