--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <p>My first paragraph. Oh,really</p>
 <a href="http://www.w3schools.com">This is a link</a>
+<b><code>this is a code </b>
 <img src="1.jpg" alt ="null" width="104" height="142">
 </body>
 </html>
