--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta name="description" content="Free Web tutorials">
+<meta name="keywords" content="HTML,CSS,XML,JavaScript">
+<meta name="author" content="Hege Refsnes">
+<meta charset="UTF-8">
+</head>
 <body>
 
-<h1>My First Heading</h1>
+<p>All meta information goes in the head section...</p>
 
-<p>My first paragraph. Oh,really</p>
-<a href="http://www.w3schools.com">This is a link</a>
-<b><code>this is a code </b>
-<img src="1.jpg" alt ="null" width="104" height="142">
 </body>
 </html>
