--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 
-<p>All meta information goes in the head section...</p>
+<p>Currently there is no website about this app. But if you have any problem or just wanna know me, 
+feel free to send email to jianmingchn@gmail.com to contact me.</p>
 
 </body>
 </html>
